--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "build": "rimraf dist && swc ./src -d dist"
+    "build": "rimraf dist && swc ./src -d dist",
+    "dev": "node --inspect=0.0.0.0 dist/index.js",
+    "start:docker": "pnpm build && pnpm dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.20",
+    "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.10",
+    "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
-    "@tsconfig/node18": "^18.2.2"
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.95",
+    "@tsconfig/node18": "^18.2.2",
+    "rimraf": "^5.0.5"
   }
 }
