--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,19 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:16-alpine
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_DB: stream_db
+      POSTGRES_HOST_AUTH_METHOD: trust
+      # POSTGRES_PASSWORD: Awodumila
+
   backend:
+    depends_on:
+      - postgres
     build: 
       context: .
       dockerfile: Dockerfile
@@ -14,4 +26,5 @@ services:
       - /usr/src/app/.pnpm-store
     command: pnpm start:docker
     environment:
-      - PORT=3000
+      DATABASE_URL: postgres://postgres:Awodumila@postgres/stream_db #"postgresql://username:password@host:port/dbname"
+      PORT: 3000
