--- a/package.json
+++ b/package.json
@@ -7,24 +7,36 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
     "build": "rimraf dist && swc ./src -d dist",
+    "db:console": "docker compose run postgres psql -h localhost -U postgres -d stream_db",
+    "db:migrate": "knex migrate:latest",
+    "docker:db:migrate": "docker compose run backend pnpm db:migrate",
+    "docker:db:migrate:undo": "docker compose run backend pnpx knex migrate:down",
+    "docker:seed:dev": "docker compose run backend pnpm ts-node scripts/seed/dev.ts",
     "dev": "node --inspect=0.0.0.0 dist/index.js",
-    "start:docker": "pnpm build && pnpm dev"
+    "start:docker": "pnpm build && pnpm dev",
+    "rebuild:be": "docker compose build backend && docker compose rm --force --stop backend && docker compose up -d backend"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.10",
     "express": "^4.18.2",
+    "knex": "^3.0.1",
     "morgan": "^1.10.0",
+    "nanoid": "^3.3.6",
+    "pg": "^8.11.3",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.95",
     "@tsconfig/node18": "^18.2.2",
-    "rimraf": "^5.0.5"
+    "prisma": "^5.5.2",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.1"
   }
 }
