--- a/package.json
+++ b/package.json
@@ -26,17 +26,22 @@
     "@types/node": "^20.8.10",
     "express": "^4.18.2",
     "knex": "^3.0.1",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "nanoid": "^3.3.6",
-    "pg": "^8.11.3",
-    "typescript": "^5.2.2"
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.95",
     "@tsconfig/node18": "^18.2.2",
+    "@types/jest": "^29.5.7",
+    "@types/lodash": "^4.14.200",
+    "jest": "^29.7.0",
     "prisma": "^5.5.2",
     "rimraf": "^5.0.5",
-    "ts-node": "^10.9.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2"
   }
 }
